Make a interactive work location graph (#50)

--- a/content/coop.html
+++ b/content/coop.html
@@ -35,7 +35,7 @@
 
 <div class="vbx2"></div>
 <h3> Locations </h3>
-<p class="half">
+<p class="full">
   <span class="big">
     77% of respondents co-oped in at least 2 different countries.
   </span>
@@ -53,9 +53,30 @@
   may not have cared about the restrictions. Another reason is respondents may have decided to provide the location of the office they would have
   worked for if it wasn't for the pandemic.
 </p>
-<div class="half second">
+<div class="vbx2"></div>
+<div class="full">
   <span class="graph-title">locations where students have worked</span>
   <div id="work-location">
+  </div>
+  <div class="scale">
+    <span class="legend">Co-op Location:</span>
+  </div>
+  <div class="scale">
+    <div class="work-location-item wl1 pressed">California</div>
+    <div class="work-location-item wl2 pressed">East Coast US</div>
+    <div class="work-location-item wl3 pressed">GTA / Toronto</div>
+    <div class="work-location-item wl4 pressed">Kitchener / Waterloo</div>
+  </div>
+  <div class="scale">
+    <div class="work-location-item wl5 pressed">Midwestern US</div>
+    <div class="work-location-item wl6 pressed">Ottawa / Montreal</div>
+    <div class="work-location-item wl7 pressed">Other Ontario</div>
+    <div class="work-location-item wl8 pressed">Pacific Northwest US</div>
+  </div>
+  <div class="scale">
+    <div class="work-location-item wl9 pressed">Remote</div>
+    <div class="work-location-item wl10 pressed">West Coast Canada</div>
+    <div class="work-location-item wl11 pressed">Outside North America</div>
   </div>
 </div>
 
