--- a/content/background.html
+++ b/content/background.html
@@ -1,4 +1,4 @@
-<h1 id="background"> Demographic & Background</h1>
+<h1 id="background"> Demographic and Background</h1>
 <h3> Gender </h3>
 <p class="half">
   <span class="big">
@@ -7,7 +7,7 @@
   The class saw a 3% increase in women representation from 1A to 4B, in first year, 
   18% of the class were women.
   <br /> <br />
-  There are many on-campus communities that supports the success of women in
+  There are many on-campus communities that support the success of women in
   computer science and engineering at UWaterloo. For example,
   <a href="https://sesoc.uwaterloo.ca/wise">Women in Software (WiSE)</a>,
   <a href="http://wics.uwaterloo.ca/">Women in Computer Science (WiCS)</a>,
@@ -40,7 +40,7 @@
   </span>
   There is a significant number of respondents who identify as Caucasian or East Asian
   Asians. There is also more ethnic diversity among men than among women respondents, 
-  whereas most women respondents are East Asian.
+  as most women respondents are East Asian.
   <br /> <br />
   There are many on-campus communities that support ethnic minorities on campus
   such as
@@ -110,8 +110,9 @@
   <span class="big">
   35.7% of all respondents, and 39% of respondents who are domestic students, immigrated to Canada.
   </span>
-  Immigrated students are any students who are considered domestic students and <a href="https://uwaterloo.ca/graduate-studies-academic-calendar/general-information-and-regulations/fee-schedule-and-tuition-assessment-information" target="_blank">
-  as a result do not pay international tuition</a>, and among others are naturalized citizens or are Permanent Residents of Canada.
+  Immigrated students are students who are considered domestic students for 
+  <a href="https://uwaterloo.ca/graduate-studies-academic-calendar/general-information-and-regulations/fee-schedule-and-tuition-assessment-information" target="_blank">tuition purposes</a>, 
+  and, among others, are naturalized citizens or permanent residents of Canada.
   Immigrated students came from countries such as Belgium, China, England and India.
 </p>
 <div class="vb"></div>
