--- a/content/lifestyle.html
+++ b/content/lifestyle.html
@@ -1,4 +1,4 @@
-<h1 id="lifestyle"> Lifestyle & Experiences</h1>
+<h1 id="lifestyle"> Lifestyle and Experiences</h1>
 
 <h3> Tech Habits </h3>
 <p class="half">
