--- a/content/introduction.html
+++ b/content/introduction.html
@@ -56,8 +56,8 @@ All analysis involving income is expressed in Canadian dollars (CAD). A
 constant rate of 1 USD to 1.3 CAD was used to make comparisons consistent and
 simple. As this rate varied over time, 1.3 was chosen due to its being an
 approximate average USD to CAD exchange rate over the past 5 years. All
-salaries include monthly housing stipends or the monthly cost of corporate
-housing if applicable. <!-- TODO: is it true that the stipend was included?? -->
+income totals include monthly housing stipends or the monthly cost of corporate
+housing if applicable.
 
 <br /><br />
 The content of this class profile was inspired by the many profiles across Waterloo
@@ -74,7 +74,7 @@ future classes, as we did, in order to take future profiles to new heights.
 <h1 id="toc">Sections</h1>
 <div class="half">
   <ul class="toc">
-    <li>1 <a href="#background">Demographic & Background</a></li>
+    <li>1 <a href="#background">Demographic and Background</a></li>
     <li>
       <p class="nested">
         Gender, ethnicity, high school, family
@@ -92,7 +92,7 @@ future classes, as we did, in order to take future profiles to new heights.
         Companies, locations, salary, factors affecting salary
       </p>
     </li>
-    <li>4 <a href="#lifestyle">Lifestyle & Experiences</a></li>
+    <li>4 <a href="#lifestyle">Lifestyle and Experiences</a></li>
     <li>
       <p class="nested">
         Extracurriculars, travel, food
@@ -104,7 +104,7 @@ future classes, as we did, in order to take future profiles to new heights.
         Exercise, physical health, mental health
       </p>
     </li>
-    <li>6 <a href="#relationships">Family and relationships</a></li>
+    <li>6 <a href="#relationships">Family and Relationships</a></li>
     <li>
       <p class="nested">
         Parents, friends, love life
@@ -138,7 +138,7 @@ future classes, as we did, in order to take future profiles to new heights.
         Students who transferred out of SE
       </p>
     </li>
-    <li>11 <a href="#outcome">Program outcome</a></li>
+    <li>11 <a href="#outcome">Program Outcome</a></li>
     <li>
       <p class="nested">
         Rating, preferred program, paths
@@ -147,7 +147,7 @@ future classes, as we did, in order to take future profiles to new heights.
     <li>12 <a href="#future">Future</a></li>
     <li>
       <p class="nested">
-        Post-graduation plans, Compensation
+        Post-graduation plans, full-time compensation
       </p>
     </li>
   </ul>
