Fix graph UI bug and fix inconsistent use of words (#47)
* Fix graph color bug

* Add Siblings vs Parental Income graph

* Proofreading and consistent use of wording

* fix nits

* Fix additional spelling and gramatical errors

* Update content/finances.html

Co-authored-by: jaxonL <jaxon.lin@uwaterloo.ca>

Co-authored-by: jaxonL <jaxon.lin@uwaterloo.ca>

--- a/content/academics.html
+++ b/content/academics.html
@@ -82,7 +82,7 @@
   2 respondents completed an option.
   </span>
   Graduating with an Option can be complicated to do in Engineering. With a restrictive amount of elective slots,
-  most students will need to either overload a term (or multiple terms), or complete courses over coop in order to meet
+  most students will need to either overload a term (or multiple terms), or complete courses over co-op in order to meet
   all the requirements for the Option and for graduating in SE.
   <br></br>
   You can find a list of all enrichment opportunities avaible to SE <a href="https://uwaterloo.ca/software-engineering/undergraduate-students/enrichment-opportunities">here</a>.
@@ -99,7 +99,7 @@
 <p class="half">
   <span class="big">
   Some students joined the class later into their degree. Among transferred students, all respondents who transferred in the
-  class came from engineering.
+  class came from Engineering.
   </span>
   Computer Science students do not appear to be interested in transferring into the class. Some possible explanations is
   the freedom provided by the CS program and the possibility of taking a Digital Hardware or a Software Engineering specialization.
@@ -117,11 +117,11 @@
   <span class="big">
   The most favourited professor with 14% of the votes is Martin Pei.
   </span>
-  For this section, students were only able to select one professor among all the
+  For this section, respondents were only able to select one professor among all the
   professors they had during their academic career.
   <br /><br />
   Some professors listed in this section did not teach a core course, which means
-  not every student had the opportunity to be taught with said professors.
+  not every respondent had the opportunity to be taught with said professors.
 </p>
 <div class="half second">
   <span class="graph-title"> favourite professors </span>
@@ -143,7 +143,7 @@
   <!-- Although 3B was the most difficult term, it had Concurrency (CS343), the most popular course. -->
 </span>
   The top favourited courses were all taken between 2B and 3B, this can either be because
-  students don't remember much of their first 3 terms' courses, or that students
+  respondents don't remember much of their first 3 terms' courses, or that respondents
   enjoyed more higher level courses.
 </p>
 <div class="half second">
@@ -161,7 +161,7 @@
   Some Linkage Electives were also not liked among the class such as SMF 101, SPCOMM 100, and SPCOMM 223.
   <br></br>
   It's important to note that courses that were disliked do not imply that
-  students find the content useless. Instead, a variety of factors, such as
+  respondents find the content useless. Instead, a variety of factors, such as
   personal interests, final grades, and workload, may have come into play.
   For example, Operating Systems (SE 350) is considered useful by 96% of students
   <a href="https://uwflow.com/course/se350" target="_blank">
@@ -180,8 +180,6 @@
   <a href="https://uwflow.com/course/music140" target="_blank">MUSIC 140 (Popular Music and Culture)</a>, 
   and <a href="https://uwflow.com/course/music140" target="_blank">MUSIC 246 (Soundtracks: Music in Film)</a>
   were the most popular electives.
-
-  <!-- Although 3B was the most difficult term, it had Concurrency (CS343), the most popular course. -->
 </span>
   None of the favourite electives were among the communication electives or science electives options.
 </p>
@@ -270,7 +268,7 @@
   </span>
   Students likely were hoping that measures would loosen over the summer or to occupy
   student housing already rented for the year.
-  However, in 4B, most students decided to move back home.
+  However, in 4B, most respondents decided to move back home.
 </p>
 <div class="half second">
   <span class="graph-title">students' location post COVID</span>
@@ -292,7 +290,7 @@
 <p class="half">
 <span class="big">
   There is no clear correlation between self-reported attendance and grades, although 
-  it appears that attending all classes benefited students academically.
+  it appears that attending all classes benefited respondents academically.
 </span>
 
 </p>
@@ -318,10 +316,10 @@
 <h3> Enriched Programs </h3>
 <p class="half">
   <span class="big">
-  Enriched Programs did not appear to benefit students academically, even in first year.
+  Enriched Programs did not appear to benefit respondents academically, even in first year.
   </span>
-  On average, respondents who took part in an Enriched Program performed worse in first year than students who
-  did not take part in an enriched program. To be clear, this does not suggest that doing an Enriched Program is not
+  On average, respondents who took part in an Enriched Program performed worse in first year than respondents who
+  did not take part in an Enriched Program. To be clear, this does not suggest that doing an Enriched Program is not
   beneficial to students, instead, it suggests that Enriched Program do not give an evident advantage in comparison
   to students who did not take part in such programs in High School.
 </p>
@@ -359,10 +357,11 @@
 <h3> Sleep </h3>
 <p class="half">
   <span class="big">
-  On average, students performed slighlty worse if they slept more than 8 hours.
+  On average, respondents performed slighlty worse if they slept more than 8 hours.
   </span>
   Note that all respondents slept at least 5 hours. Although there seems to be some correlation between sleep
-  and grades, this does not necessarily mean that one causes the other.
+  and grades, this does not necessarily mean that one causes the other. Also note that the recommended number of hours of
+  sleep for young adults is <a href="https://www.sleepfoundation.org/how-sleep-works/how-much-sleep-do-we-really-need#:~:text=National%20Sleep%20Foundation%20guidelines1,enable%20their%20growth%20and%20development.">7 to 9 hours</a>.
 </p>
 <div class="half second">
   <span class="graph-title">grades compared to hours of sleep</span>
