--- a/content/coop.html
+++ b/content/coop.html
@@ -44,12 +44,12 @@
   large tech companies that hire software engineers such as Google, Facebook,
   Apple, etc.
   <br /><br />
-  Every odd coop term, there was at least one student working outside
+  Every odd co-op term, there was at least one student working outside
   of North America. This included locations in Europe and Shanghai.
   <br /><br />
   Although the University of Waterloo did not authorize any co-ops outside of Canada once the pandemic hit, 35.4% of respondents
   said they worked in the US for their last co-op. One explanation is that in order
-  to graduate from Software Engineering only 5 (now 4 as a result of the pandemic) out of 6 approved coops need to be completed, so students
+  to graduate from Software Engineering only 5 (now 4 as a result of the pandemic) out of 6 approved co-ops need to be completed, so students
   may not have cared about the restrictions. Another reason is respondents may have decided to provide the location of the office they would have
   worked for if it wasn't for the pandemic.
 </p>
@@ -117,7 +117,7 @@
   $1,500 to $2,500 per month. In comparison, Waterloo housing costs approximately $700 per month. 
   <br /><br />
   The lower median hourly compensation may be lower in the last co-op because respondents were not able to work in 
-  the US or worked for US companies on the Canadian payroll and received lower compensation as a result.
+  the US or worked for US companies on a Canadian payroll and received lower compensation as a result.
   <br /><br />
   Note that some of these values include other types of compensation such as stipend and others may not.
 </p>
@@ -128,23 +128,23 @@
 
 <div class="vbx2"></div>
 
-<h3> Coop Applications Breakdown</h3>
+<h3> Co-op Applications Breakdown</h3>
 <p class="full">
   <span class="big">
-  As respondents gained coop experience, they applied to less jobs over time
-  and found more jobs outside of Waterlooworks.
+  As respondents gained work experience, they applied to less jobs over time
+  and found more jobs outside of WaterlooWorks.
   </span>
-  Respondents applied to 3 times less jobs by their last coops. The number of interviews
-  respondents had every term varied between 3.62 and 8.20 and the number of offers received
+  Respondents applied to 3 times less jobs by their last co-ops. The number of interviews
+  respondents had every term varied between 3.62 and 8.20, and the number of offers received
   every term varied between 1.6 to 2.84.
   <br /><br />
   Around 30% of respondents found their job externally. In particular, 60% of respondents found their
-  job externally on their last coop term. There could be several reasons for this increase, the first one
+  job externally on their last co-op term. There could be several reasons for this increase: the first one
   is that students were interested in jobs not listed on Waterlooworks, another reason could be the pandemic which
   encouraged students to apply on more than one job board.
 
   <br /><br />
-  Note: The average number of external application is only based on students who looked
+  Note: The average number of external applications is only based on respondents who looked
   for external jobs.
 </p>
 <div class="hvb"></div>
@@ -160,13 +160,13 @@
 
 <div class="vbx2"></div>
 
-<h3> Coop Ratings</h3>
+<h3> Co-op Ratings</h3>
 <p class="half">
   <span class="big">
-  Most respondents had an "Outstanding" or "Excellent" coop rating.
+  Most respondents had an "Outstanding" or "Excellent" co-op rating.
   </span>
-  52% of respondents received an "Outstanding" coop rating and 
-  43.6% received a "Very Good" coop rating every coop term.
+  52% of respondents received an "Outstanding" co-op rating and 
+  96.5% received at least an "Excellent" co-op rating every co-op term.
 </p>
 <div class="half second">
   <span class="graph-title">co-op ratings over co-op terms</span>
@@ -175,7 +175,7 @@
 
 <div class="vbx2"></div>
 
-<h3> Coop Types</h3>
+<h3> Co-op Types</h3>
 <p class="half">
   <span class="big">
   91% respondents worked as a Software Engineer / Web Developer every term.
@@ -263,7 +263,7 @@
 <div class="half">
   <p>"Finally getting an offer in California"</p>
   <div class="vb"></div>
-  <p>"Making some (hopefully) lifelong friends during the coop of summer 2019"</p>
+  <p>"Making some (hopefully) lifelong friends during the [co-op] of summer 2019"</p>
   <div class="vb"></div>
   <p>"I got to participate in a DnD one-shot hosted by a coworker, and our party's first reaction to any encounter was to try to burn the place down first. Our DM designed the final encounter to take longer than what we ended up taking (it was supposed to be in a house full of booby traps and whatnot), but our arsonistic nature forced the final boss and his henchmen to abandon their base and fight us out in the open"</p>
 </div>
@@ -272,9 +272,9 @@
   <div class="vb"></div>
   <p>"Drinking beer at work with my boss"</p>
   <div class="vb"></div>
-  <p>"Too many to pick. A funny one is once someone leaked [company X's] internal uber/lyft codes and we were taking unlimited $500 Uber Luxe XLs across California."</p>
+  <p>"Too many to pick. A funny one is once someone leaked [company X's] internal [U]ber/[L]yft codes and we were taking unlimited $500 Uber Luxe XLs across California."</p>
   <div class="vb"></div>
-  <p>"Most of them were great but my time in California was definitely the most memorable since I met so many new people and experienced a lot of fun things for the first time. Great weather, great activities, great trips to new cities and great people made for an exciting coop term!"</p>
+  <p>"Most of them were great but my time in California was definitely the most memorable since I met so many new people and experienced a lot of fun things for the first time. Great weather, great activities, great trips to new cities and great people made for an exciting [co-op] term!"</p>
 </div>
 
 <div class="vbx2"></div>
@@ -339,7 +339,7 @@ imply higher job satisfaction.
   interests (in terms of work location, type of work, etc.) among men and women
   respondents in the class.
   <br/>
-  Note: There were about 30-42 men and 8-9 women who responded to coop salaries.
+  Note: There were about 30-42 men and 8-9 women who responded to co-op salaries.
   <br /><br />
 
   However, this does not suggest that there is no gender bias in the long term.
@@ -368,7 +368,7 @@ imply higher job satisfaction.
   paying job.
   <br /> <br />
 
-  Students who attended more than 5 hackathons did not earn more than those who only attended at least 1.
+  Respondents who attended more than 5 hackathons did not earn more than those who only attended at least 1.
 </p>
 <div class="half second">
   <span class="graph-title">hackathon attendance's influence on hourly salary</span>
@@ -405,10 +405,10 @@ imply higher job satisfaction.
 <h3> Admission average </h3>
 <p class="half">
   <span class="big">
-  Respondents who had an admission average above 95% earned 3.7% more on their 1st coop and 23.8% more overall than those that
+  Respondents who had an admission average above 95% earned 3.7% more on their 1st co-op and 23.8% more overall than those that
   had a lower entrance average.
   </span>
-  Based on the coop average in first year, it is unlikely that admission are a causation of average salary.
+  Based on the co-op average in first year, it is unlikely that admission averages are a causation of average co-op salary.
 </p>
 <div class="half second">
   <span class="graph-title">admission average compared to hourly salary</span>
