--- a/content/exchange.html
+++ b/content/exchange.html
@@ -84,7 +84,7 @@
     <br /><br />
     The language barrier - the area is mostly French-speaking.
     <br /><br />
-    Finding a coop for the next term, especially if the term start/end dates did
+    Finding a co-op for the next term, especially if the term start/end dates did
     not match the typical UW start/end dates.
     <br /><br />
     Connecting with the locals and making friends in a meaningful capacity. Some
@@ -120,7 +120,7 @@
     <br /><br />
     Exchange was by far my favourite term while at UW. I would highly recommend it.
     <br /><br />
-    It was hard to find the next coop; everything else is fantastic!
+    It was hard to find the next [co-op]; everything else is fantastic!
     <br /><br />
     Exchange was an invaluable experience for me. I was left to my own devices in an
     alien country with a different culture and had to learn to live like a local. I
