--- a/content/finances.html
+++ b/content/finances.html
@@ -2,7 +2,7 @@
 <h3> Budgeting </h3>
 <p class="half">
   <span class="big">
-    63% of students did not budget their money.
+    63% of respondents did not budget their money.
   </span>
   Of those who did, the majority didn't use complex budgeting techniques or tools.
   Interestingly, the majority of students also didn't have much debt and were able to pay off their school expenses.
@@ -20,7 +20,7 @@
 <h3> Investing </h3>
 <p class="half">
   <span class="big">
-    85% of students invested their money.
+    85% of respondents invested their money.
   </span>
   Index Funds and Managed Services were the most popular methods of investments, used in 60% of responses. 
   These methods provide an easy, diversified, and low-cost way to invest, making them a useful tool to get started with investing.
@@ -37,7 +37,7 @@
 <h3> Family Funding </h3>
 <p class="half">
   <span class="big">
-    80% of students received some funding from their family.
+    80% of respondents received some funding from their family.
   </span>
   For Canadians, a popular source of funding is a Registered Education Savings Plan (RESP). 
   Other methods of funding could include assisting in tuition payments, rent payments or contributions to other living expenses.
@@ -59,7 +59,7 @@
   54% of respondents spent less than $500 CAD on school materials. 
   <br /> <br /> <!-- Newline -->
   It's likely that courses over the first 2 years had greater amounts of required additional materials. 
-  As the amount of required materials decreased over the years, this may relate to why few students payed over $1,000 over 8 terms.
+  The amount of required materials decreasing over the years may relate to why few respondents payed over $1,000 over 8 terms.
 </p>
 <div class="half second">
   <span class="graph-title">money spent on school materials (e.g. textbooks)</span>
