--- a/content/future.html
+++ b/content/future.html
@@ -9,7 +9,7 @@
   answered this question. The only take-away is that most students had
   the opportunity to accept a job offer prior to graduating.
   <br></br>
-  Students pursuing further education will be doing so at Columbia University,
+  Respondents pursuing further education will be doing so at Columbia University,
   Stanford University, as well as back at the University of Waterloo.
 </p>
 <div class="half second">
@@ -88,7 +88,7 @@
 
 <p class="half">
   <span class="big">
-    Students are very content with their post-grad plans, with 52% feeling
+    Respondents are very content with their post-grad plans, with 52% feeling
     that the latter are perfect and 91% rating their future a 4/5 or higher.
   </span>
   Given the state of the world at this moment, it is reassuring to see
@@ -192,7 +192,7 @@
 <h3> Moving home </h3>
 <p class="half">
   <span class="big">
-    27% of students plan to return to their home country after moving away.
+    27% of respondents plan to return to their home country after having moved away.
   </span>
   Moving away is a big change. There's a fairly even split among students who would like to return home or stay abroad, while the rest of students haven't decided yet.
   This goes to show that everyone has different goals and each student should find what's important to them.
@@ -272,7 +272,7 @@
     Don't limit your co-op applications to one place - especially
     in first year. It's better to apply to a variety of jobs
     in a variety of locations -- use that as an excuse to
-    lightly travel when on coop.
+    lightly travel when on [co-op].
     <br></br>
     Stop sending cringey snaps when drunk.
     <br></br>
