--- a/content/health.html
+++ b/content/health.html
@@ -48,7 +48,7 @@
     <span class="big">
       The most common mental health issues were anxiety, low self-esteem, and depression.
     </span>
-    Trying to manage academics, coop, and social lives can take a toll on us. 
+    Trying to manage academics, co-op, and social lives can take a toll on us. 
     It's important to take some time to focus on ourselves and do the things that are important and relaxing for each of us. 
     This can help us find balance and remind ourselves of our own accomplishments.
   </p>
@@ -63,7 +63,7 @@
 <p class="half">
   <span class="big">Over 80% of respondents felt imposter syndrome over their university years.</span>
   Impostor syndrome refers to an individual's internal experience of believing that they are not as competent as others perceive them to be. 
-  The Software Engineering Program is very competitive and has one of the highest admission averages in Waterloo. This can place students in a 
+  The Software Engineering program is very competitive and has one of the highest admission averages in Waterloo. This can place students in a 
   pressure-to-achieve environment which might have lead to students feeling like an imposter.
 </p>
 <div class="half second">
@@ -71,9 +71,9 @@
   <div id="imposter-syndrome" class="graph-center"></div>
 </div>
 <p class="half">
-  By the end of their university career, around 46% of students do not feel imposter syndrome, while 30% of the students sometimes do, and 24% of the 
-  students still do. This shows a growth in the student's confidence over the years as they overcame their academic hurdles, experienced the real world
-  during coops, and found their calling in software engineering. 
+  By the end of their university career, around 46% of respondents do not feel imposter syndrome, while 30% of the respondents sometimes do, and 24% of the 
+  respondents still do. This shows a growth in the student's confidence over the years as they overcame their academic hurdles, experienced the real world
+  during co-ops, and found their calling in Software Engineering. 
 </p>
 <div class="half second">
   <span class="graph-title">do you still feel like an imposter?</span>
