--- a/content/introduction.html
+++ b/content/introduction.html
@@ -2,14 +2,14 @@
 <p class="full">
   Software Engineering (SE) at the University of Waterloo is an interdisciplinary
   program supported by both the Faculty of Mathematics and the Faculty of
-  Engineering. For 5 years, all 92 graduating students of the class of 2021 (SE'XXI)
+  Engineering. For 5 years, all 92 graduating students of the class of 2021 (SE'XXI or SEXXI)
   spent 8 semesters in school with similar schedules as well as 6 co-ops.
   Undergraduates in the Software Engineering program are awarded a Bachelor or
   Baccalaureate of Software Engineering (B. SE.) degree at the end of their 4 & 
   2/3rds year journey.
   <br /><br />
   SE is commonly compared to Computer Science, and is often seen as its more-constrained,
-  engineering-oriented counterpart. Prospective students may wonder whether SE
+  Engineering-oriented counterpart. Prospective students may wonder whether SE
   is the right fit for them, and whether they’ll enjoy the environment. This
   profile attempts to showcase who SE 2021 students are, what they've done, and
   how they had experienced university.
@@ -33,7 +33,7 @@ transferred out, responded.
 <br /><br />
 
 Respondents who had transferred out of SE had completed at least
-2 years (4 study terms) in the Software Engineering Program with the SE2021 cohort.
+2 years (4 study terms) in the Software Engineering program with the SE 2021 cohort.
 <br /><br />
 
 An addendum survey was also sent out, where
@@ -49,7 +49,7 @@ Study terms are defined as 1A, 1B, 2A, up to 4B (8 terms). 4 month co-op terms
 occur after every study term starting after 1B and ending before 4B. Government
 shutdowns due to the Covid-19 virus began in March 2020, partway through the 5th
 co-op term. The 4A and 4B study terms were both done remotely due to the pandemic.
-The final coop term was also conducted remotely for most students.
+The final co-op term was also conducted remotely for most students.
 <br /><br />
 
 All analysis involving income is expressed in Canadian dollars (CAD). A
