--- a/content/lifestyle.html
+++ b/content/lifestyle.html
@@ -126,7 +126,7 @@
   S.R.E.A.M - Sleep Rules Everything Around Me.
   </span>
   Future students will be glad to see that studying SE does not mean sacrificing
-  sleep. In fact, ~77% of students sleep >= 7 hours on average, which is the
+  sleep. In fact, ~77% of respondents sleep >= 7 hours on average, which is the
   <a href="https://www.cdc.gov/sleep/about_sleep/how_much_sleep.html"> recommended amount for adults by the CDC.</a>
 </p>
 <div class="half second">
@@ -139,11 +139,11 @@
 <h3> Travel Locations </h3>
 <p class="half">
   <span class="big">
-    Via coop and exchange, Waterloo SE students have had many
+    Via co-op and exchange, Waterloo SE students have had many
     opportunities to travel across the world.
   </span>
   California and Europe as large regions seem the commonly favoured,
-  likely due to their dominance for coop and exchange respectively.
+  likely due to their dominance for co-op and exchange respectively.
 </p>
 <div class="half second">
   <span class="graph-title">favourite travel locations</span>
@@ -191,7 +191,7 @@
 <h3> Extracurriculars </h3>
 <p class="half">
   <span class="big">
-    Unlike high school, just over half of students were not involved in any
+    Unlike high school, just over half of respondents were not involved in any
     extracurriculars during undergrad.
   </span>
   However a substantial amount did get involved for a few academic terms. 
@@ -224,7 +224,7 @@
 
 <p class="half">
   <span class="big">
-    SE students who exercise enjoy sports and weight training the most.
+    SE respondents who exercise enjoy sports and weight training the most.
   </span>
   Hiking and running are the two next most favoured exercise methods.
 </p>
@@ -258,7 +258,7 @@
   <span class="small">
   - Richelle E. Goodrich
   </span>
-  Spending time with friends made SE 21 the most happy, followed by cooking and/or
+  Spending time with friends made SE 2021 the most happy, followed by cooking and/or
   eating food. Enjoying familial presence came in third.
 </p>
 <div class="half second">
