--- a/content/misc.html
+++ b/content/misc.html
@@ -53,7 +53,7 @@
 <h3>Cat or Dog</h3>
 <p class="half">
   <span class="big">
-  Most students are dog lovers! 🐕
+  Most respondents are dog lovers! 🐕
 </p>
 <div class="half second">
   <span class="graph-title">are you a cat or a dog person?</span>
@@ -73,7 +73,7 @@ some stories over the past 5 years.
   <div class="path-item">
     <span class="big path-title">Biking Buddies</span>
     <p>
-      "In my second coop term, I snuck into Google's headquarters in Palo Alto with 
+      "In my second [co-op] term, I snuck into Google's headquarters in Palo Alto with 
       my good friend [redacted] on a weekend, and no one was around so we stole their
       campus bikes and went sightseeing around the area. My phone's camera had broken
       autofocus so we couldn't get nice pictures, which is the sad part. We were good
@@ -226,7 +226,7 @@ some stories over the past 5 years.
   of the total graduates (92). <!-- TODO: confirm that it was 92 grads? -->
 </p>
 <div class="half second">
-  <span class="graph-title">are you an SE 21 grad?</span>
+  <span class="graph-title">are you an SE 2021 grad?</span>
   <div id="se21-grad"></div>
 </div>
 
