--- a/content/outcomes.html
+++ b/content/outcomes.html
@@ -3,7 +3,7 @@
 <h3> Preferred program </h3>
 <p class="half">
   <span class="big">
-    70% of students would choose SE again if they could go back to high
+    70% of respondents would choose SE again if they could go back to high
     school.
   </span>
   Computer Science is a popular alternative because it has
