--- a/content/relationships.html
+++ b/content/relationships.html
@@ -19,7 +19,7 @@
 </div>
 
 <p class="half">
-  Students spent on average 1.17 days with their parents physically, with
+  Respondents spent on average 1.17 days with their parents physically, with
   63 % spending less than an entire day per month.
 </p>
 <div class="half second">
@@ -45,9 +45,9 @@
 
 <h2>Friendships</h2>
 <p class="full">
-  On average, a softie made 4.36 new friends over coop, and 3.05 over a school term.
-  They would lose on average 1.30 friends over coop, compared to 0.55 over a school
-  term. Thus, the net gain in friends over coop is about 3.1 friends, while the net
+  On average, a softie made 4.36 new friends over co-op, and 3.05 over a school term.
+  They would lose on average 1.30 friends over co-op, compared to 0.55 over a school
+  term. Thus, the net gain in friends over co-op is about 3.1 friends, while the net
   gain over a school term is 2.31 friends.
 </p>
 <div class="hvb"></div>
@@ -58,8 +58,8 @@
 
   <div class="scale">
     <span class="legend">Fluctuation (term): </span>
-    <div class="friends-gain-item c1 pressed">Gain (coop)</div>
-    <div class="friends-gain-item c2 pressed">Lost (coop)</div>
+    <div class="friends-gain-item c1 pressed">Gained (co-op)</div>
+    <div class="friends-gain-item c2 pressed">Lost (co-op)</div>
     <div class="friends-gain-item c3 pressed">Gained (study)</div>
     <div class="friends-gain-item c4 pressed">Lost (study)</div>
   </div>
