--- a/content/background.html
+++ b/content/background.html
@@ -8,14 +8,14 @@
   18% of the class were women.
   <br /> <br />
   There are many on-campus communities that support the success of women in
-  computer science and engineering at UWaterloo. For example,
+  Computer Science and Engineering at UWaterloo. For example,
   <a href="https://sesoc.uwaterloo.ca/wise">Women in Software (WiSE)</a>,
   <a href="http://wics.uwaterloo.ca/">Women in Computer Science (WiCS)</a>,
   <a href="https://uwaterloo.ca/women-in-engineering/">Women in Engineering (WiE)</a>, and
   <a href="https://www.meetup.com/en-AU/Women-Who-Code-Waterloo/"> Women Who Code Waterloo</a>.
 </p>
 <div class="half second">
-  <span class="graph-title">SE 21's gender distribution</span>
+  <span class="graph-title">SE 2021's gender distribution</span>
   <div id="gender"></div>
 </div>
 
@@ -71,7 +71,7 @@
   <span class="big">
   At least 6.9% of respondents are part of the LGBTQ+ community.
   </span>
-  4 students preferred not to disclose.
+  4 respondents preferred not to disclose.
   <br /> <br />
   There are many on-campus communities that support LGBTQ+ community
   such as
@@ -95,7 +95,7 @@
   The class saw a 2.1% decrease in international students from 1A (15%) to 4B.
   This could be due to the higher tuition costs for international students, especially in Engineering.
   International term tuition fees, prior to the academic year 2018/19 where it was subject to a 62.1% fee increase, 
-  were around $15000 for computer science students. This made the computer science program more cost beneficial to
+  were around $15000 for Computer Science students. This made the Computer Science program more cost beneficial to
   international students.
   <br /> <br />
   International students came from countries such as China and India.
@@ -145,7 +145,7 @@
   <span class="big">
   45% of respondents' mother tongue is not English.
   </span>
-  There was a significant number of students who spoke English and Mandarin as their first language, but overall,
+  There was a significant number of respondents who spoke English and Mandarin as their first language, but overall,
   there is a wide variety of language spoken by students.
 </p>
 <div class="half second">
@@ -159,7 +159,7 @@
   63% of respondents speak at least two languages.
   </span>
   The most common languages spoken, other than English, are Mandarin and French.
-  Among students who spoke 3+ languages, French was a common spoken language.
+  Among respondents who spoke 3+ languages, French was a common spoken language.
 </p>
 <div class="vb"></div>
 <div class="half">
@@ -181,7 +181,7 @@
   the median Canadian family income (<a href="https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=1110001201">$96,080</a>).
   </span>
   These numbers represent the income the students' family had prior to starting
-  University. The majority of students have a family income between $50,000 and $200,000.
+  University. The majority of respondents have a family income between $50,000 and $200,000.
 </p>
 <div class="half second">
   <span class="graph-title">number of students per family income class</span>
@@ -206,14 +206,20 @@
 <div class="vbx2"></div>
 
 <h3>Siblings</h3>
-<p class="half">
+<p class="full">
   <span class="big">
   The majority of students have at least 1 sibling.
-  <!-- Maybe look at sibling number vs family income? -->
+  </span>
+  There is also no clear correlation between familial income and number of siblings. The median for 0 and 2+ siblings
+  is in the 100k to 150k income per year bracket and the median for 1 sibling is in the 150k to 200k income per year bracket.
 </p>
-<div class="half second">
+<div class="half">
   <span class="graph-title">students' number of siblings</span>
   <div id="siblings"></div>
+</div>
+<div class="half second">
+  <span class="graph-title">parental income compared to number of siblings</span>
+  <div id="siblings-parents"></div>
 </div>
 
 <div class="vbx2"></div>
@@ -269,7 +275,7 @@
   </span>
   Unlike other universities, CEGEP students enrolled in an Engineering program at Waterloo cannot convert
   any of their CEGEP course credits into university credits. An exception exists for Calculus courses which can be counted as
-  a credit toward Math 117 (Calculus 1 for Engineering).
+  a credit toward Math 117 (Calculus 1 for Engineering) in some cases. <a href="https://uwaterloo.ca/future-students/transfer-students/cegep-transfer-credits">You can find more information here</a>.
 </p>
 <div class="half second">
   <span class="graph-title">students & CEGEP fields</span>
@@ -282,7 +288,7 @@
 <h3>Programming Knowledge</h3>
 <p class="half">
   <span class="big">
-  5.6% of students did not know how to program prior to starting University.
+  5.6% of respondents did not know how to program prior to starting at UWaterloo.
   </span>
   Programming knowledge is a required admission criteria to join the Software Engineering
   program at the University of Waterloo.
