--- a/content/transfers.html
+++ b/content/transfers.html
@@ -2,7 +2,7 @@
 <h3> Programs </h3>
 <p class="half">
 <span class="big">
-    All students who transferred out of SE went into the Computer Science program.
+    All respondents who transferred out of SE went into the Computer Science program.
 </span>
 Of the people surveyed, approximately 9.5% of students switched out of the Software Engineering program.
 </p>
@@ -16,7 +16,7 @@ Of the people surveyed, approximately 9.5% of students switched out of the Softw
 <h3> The Switch Years </h3>
 <p class="half">
 <span class="big">
-    The majority of the students switched out of the program in their second or third year.
+    The majority of the respondents switched out of the program in their second or third year.
 </span>
 The data here was a combination of both the survey and the SE board results. We see that a majority of students switched programs
 in their second or their third year. It is also interesting to note that almost always a plurality of transferring students left SE in
@@ -33,8 +33,8 @@ an Excellent academic standing.
 <span class="big">
     A flexible course schedule is the main reason for switching out of Software Engineering.
 </span>
-The engineering program has a relatively rigid course schedule which offers students the flexibility to choose courses usually only in their fourth year. 
-The computer science program, on the other hand, is less restrictive and allows students to customize their schedules freely. 
+The Engineering program has a relatively rigid course schedule which offers students the flexibility to choose courses usually only in their fourth year. 
+The Computer Science program, on the other hand, is less restrictive and allows students to customize their schedules freely. 
 <br /> <br />
 Other reasons for transferring included avoiding a course, graduating early, and accommodating for an exchange term. 
 </p>
@@ -61,9 +61,9 @@ in order to have a more flexible schedule for future terms and to take courses b
 <h3>I Regret Nothing</h3>
 <p class="half">
 <span class="big">
-    None of the transferred students regretted their decision.
+    None of the transferred students surveyed regretted their decision.
 </span>
-The computer science program was successfully able to provide the transferred students with a better place to align themselves with their university goals. 
+The Computer Science program was successfully able to provide the transferred students with a better place to align themselves with their university goals. 
 </p>
 <div class="half second">
     <span class="graph-title">did you regret transferring out of SE?</span>
